tests/e2e/config/etcd.yaml
# Human-readable name for this member.
name: 'everoute-etcd'

# Path to the data directory.
data-dir: /etc/everoute/etcd/data-dir

# Time (in milliseconds) of a heartbeat interval.
heartbeat-interval: 100

# Time (in milliseconds) for an election to timeout.
election-timeout: 1000

# List of comma separated URLs to listen on for peer traffic.
listen-peer-urls: http://localhost:2380

# List of comma separated URLs to listen on for client traffic.
listen-client-urls: http://localhost:2379

# List of this member's peer URLs to advertise to the rest of the cluster.
# The URLs needed to be a comma-separated list.
initial-advertise-peer-urls: http://localhost:2380

# List of this member's client URLs to advertise to the public.
# The URLs needed to be a comma-separated list.
advertise-client-urls: http://localhost:2379

# Initial cluster token for the etcd cluster during bootstrap.
initial-cluster-token: 'etcd-cluster'

# Initial cluster state ('new' or 'existing').
initial-cluster-state: 'new'

# Accept etcd V2 client requests
enable-v2: true

client-transport-security:
  # Enable client cert authentication.
  client-cert-auth: false

  # Client TLS using generated certificates
  auto-tls: false

peer-transport-security:
  # Enable peer client cert authentication.
  client-cert-auth: false

  # Peer TLS using generated certificates.
  auto-tls: false
